Fix sizing and centered the logo on the nav bar, also increase the min size of the navbar before collapse in an attempt to have a collapse button on mobile as expected

--- a/app/assets/stylesheets/discovery.scss
+++ b/app/assets/stylesheets/discovery.scss
@@ -100,16 +100,6 @@
   line-height: 80px;
 }
 
-/*@media (min-width: 100px) {
-.navbar-brand.abs
-    {
-        position: absolute;
-        width: 100%;
-        left: 0;
-        text-align: center;
-    }
-}*/
-
 .navbar-toggle {
   margin-top: 23px;
   padding: 9px 10px !important;
